--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <button onclick="startTimer()">Start</button>
       <button onclick="resetTimer()">Reset</button>
     </div>
+    <div id="darkmode">
+      <button onclick="toggleDarkMode()">Dark Mode</button>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
