quotes make you sound smart

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="app">
     <h1>philex</h1>
-    <p id="quote">“Time is the wisest counselor of all.”</p>
+    <p id="quote">“We must use time as a tool, not as a couch.”</p>
     <div id="time-selector">
       <button onclick="changeTime(-5)">←</button>
       <span id="time-display">25</span> min
